Fixed checkbox on safari

--- a/components/CheckBox/index.css
+++ b/components/CheckBox/index.css
@@ -6,6 +6,8 @@
   width: 16px;
   height: 16px;
   border: 1px solid rgba(0, 0, 0, 0.3);
+  border-radius: 0;
+  background: inherit;
 }
 .checkbox:checked:after {
   content: "";
@@ -16,7 +18,7 @@
   margin: auto;
 }
 label {
-  margin-bottom: 5px;
+  margin-bottom: 10px;
   display: flex;
   align-items: center;
 }
